# flick-sandbox

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  TODOS.md  compose.yml  package-lock.json
.github/workflows/: build.yml
backend/: Dockerfile  README.md  flick-sandbox.service  pyproject.toml
backend/app/: logger.py  main.py  models.py
compiler/: Dockerfile
frontend/: .env.development  .env.production  next.config.mjs  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/app/: examples.tsx  layout.tsx  page.tsx
frontend/src/components/: editor.tsx  output.tsx  sidebar.tsx
hooks/: prepare-commit-msg
